# getLNKinfo

./: CMakeLists.txt  README.md  getLNKinfo.cpp  getLNKinfo.h  getLNKinfo.rc  implementationNotes.md  resource.h  stuff.cpp
demo/: exampleLinkFile.lnk  runDemo.bat
